added email address for guest.

--- a/app/views/admin/guests/_form.haml
+++ b/app/views/admin/guests/_form.haml
@@ -1,5 +1,6 @@
 = simple_form_for [:admin, @event, @guest] do |f|
   = f.input :name
+  = f.input :email
   = f.input :invited_to_ceremony
   = f.input :invited_to_evening
   = f.input :vegetarian
