added google maps api key

--- a/app/views/events/show.haml
+++ b/app/views/events/show.haml
@@ -82,7 +82,7 @@
         %br
         .map--overlay{onclick: "style.pointerEvents='none'"}
         :plain
-          <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+          <script type="text/javascript" src="http://maps.google.com/maps/api/js?AIzaSyAaAFnOj6ksETWvLdFUP5Mqc_rIOi93Kk4"></script>
           <div class="map wpgmappity_container" id="wpgmappitymap"></div>
           <script type="text/javascript">
           (function(){
