removed section for API key

--- a/app/views/events/show.haml
+++ b/app/views/events/show.haml
@@ -84,7 +84,7 @@
         :plain
           <iframe src="//www.google.com/maps/embed/v1/place?q=Harrods,Brompton%20Rd,%20UK
           &zoom=17
-          &key=AIzaSyAaAFnOj6ksETWvLdFUP5Mqc_rIOi93Kk4&callback=initMap">
+          &key=AIzaSyAaAFnOj6ksETWvLdFUP5Mqc_rIOi93Kk4">
           </iframe>
 - if @event.show_registry?
   #Gifts
