--- a/app/views/events/show.haml
+++ b/app/views/events/show.haml
@@ -82,10 +82,23 @@
         %br
         .map--overlay{onclick: "style.pointerEvents='none'"}
         :plain
-          <iframe src="//www.google.com/maps/embed/v1/place?q=Harrods,Brompton%20Rd,%20UK
-          &zoom=17
-          &key=AIzaSyAaAFnOj6ksETWvLdFUP5Mqc_rIOi93Kk4">
-          </iframe>
+        <div class="map wpgmappity_container" id="wpgmappitymap"></div>
+          <script>
+          function initMap() {
+            var uluru = {lat: -25.363, lng: 131.044};
+            var map = new google.maps.Map(document.getElementById('map'), {
+              zoom: 4,
+              center: uluru
+            });
+            var marker = new google.maps.Marker({
+              position: uluru,
+              map: map
+            });
+          }
+          </script>
+          <script async defer
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaAFnOj6ksETWvLdFUP5Mqc_rIOi93Kk4&callback=initMap">
+          </script>
 - if @event.show_registry?
   #Gifts
   .box.box--mint
