--- a/app/views/events/show.haml
+++ b/app/views/events/show.haml
@@ -82,23 +82,24 @@
         %br
         .map--overlay{onclick: "style.pointerEvents='none'"}
         :plain
-         <div class="map wpgmappity_container" id="wpgmappitymap"></div>
+          <div class="map wpgmappity_container" id="map"></div>
           <script>
           function initMap() {
-          var uluru = {lat: -25.363, lng: 131.044};
+          var StHelens = {lat: 51.514854, lng: -0.081652};
           var map = new google.maps.Map(document.getElementById('map'), {
-           zoom: 4,
-           center: uluru
-             });
-           var marker = new google.maps.Marker({
-            position: uluru,
-            map: map
-             });
-           }
-           </script>
-           <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaAFnOj6ksETWvLdFUP5Mqc_rIOi93Kk4&callback=initMap">
-           </script>
+          zoom: 16,
+          center: StHelens
+          });
+          var marker = new google.maps.Marker({
+          position: StHelens,
+          icon : 'http://labio-wedding.s3.amazonaws.com/assets/church7.png',
+          map: map
+          });
+          }
+          </script>
+          <script async defer
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaAFnOj6ksETWvLdFUP5Mqc_rIOi93Kk4&callback=initMap">
+          </script>
 - if @event.show_registry?
   #Gifts
   .box.box--mint
