--- a/app/views/events/show.haml
+++ b/app/views/events/show.haml
@@ -68,7 +68,7 @@
 
   .row-fluid.overflow
     %ul.small-block-grid-3
-      - @venue_photos.first(3).each do |venue_photo|
+      - @venue_ranphoto.first(3).each do |venue_photo|
         %li= image_tag venue_photo.file_url
 
   .row
@@ -108,7 +108,7 @@
         %h5 Wedding Gifts
     .row-fluid.overflow
       %ul.small-block-grid-3
-        - @venue_photos.last(3).each do |venue_photo|
+        - @venue_ranphoto.last(3).each do |venue_photo|
           %li= image_tag venue_photo.file_url
     .row
       .column.small-12
