--- a/app/views/events/show.haml
+++ b/app/views/events/show.haml
@@ -86,6 +86,7 @@
           <script>
           function initMap() {
           var StHelens = {lat: 51.514854, lng: -0.081652};
+          var StAndrews = {lat: 51.513632, lng: -0.081072};
           var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 16,
           center: StHelens
@@ -93,6 +94,10 @@
           var marker = new google.maps.Marker({
           position: StHelens,
           icon : 'http://labio-wedding.s3.amazonaws.com/assets/church7.png',
+          map: map
+          });
+          var marker = new google.maps.Marker({
+          position: StAndrews,
           map: map
           });
           }
