--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,7 +103,20 @@
     display: block;
     position: absolute;
     top: 0; right: 0; bottom: 0; left: 0;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.4);
+  }
+}
+
+#Photorow {
+  position: relative;
+  background-size: cover;
+  background-position: center center;
+  &:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    background: rgba(164, 214, 218,0);
   }
 }
 
