--- a/app/assets/stylesheets/themes/popcorn/layout/_core.scss
+++ b/app/assets/stylesheets/themes/popcorn/layout/_core.scss
@@ -11,6 +11,10 @@ h1, h2, h3, h4, h5, h6 {
   background: $white;
   color: $salmon;
 }
+.photorow {
+  background: $mint;
+  color: $salmon;
+}
 
 .gm-style img {
   max-width: none;
