Updated Email wording`

--- a/app/views/events/show.haml
+++ b/app/views/events/show.haml
@@ -49,7 +49,7 @@
             %h3 {{ guestName(guest) }}
             %input{type: "text", placeholder: "enter guest name", ng: { show: "guest.is_guest", model: "newGuest.name" }}
             %p {{ rsvpStatus(guest) }}
-            %input{type: "text",:required => true, placeholder: "Please enter your email", ng: { hide: "guest.is_guest || guest.rsvp", model: "guest.email", message: "Required "}}
+            %input{type: "text",:required => true, placeholder: "Please enter your email in order to RSVP", ng: { hide: "guest.is_guest || guest.rsvp", model: "guest.email", message: "Required "}}
             %button.button{ng: { show: "guest.rsvp == null && !guest.is_guest", click: "setRsvp(guest, false)"}} Sorry I cannot attend
             %button.button{ng: { hide: "guest.is_guest || guest.rsvp",disabled: "!guest.email", click: "setRsvp(guest, true)"}} {{ rsvpButtonText(guest) }}
             %button.button{ng: { show: "guest.rsvp", click: "setRsvp(guest, false)"}} Sorry I can no longer make it
